grammar.js
    source_file: $ => repeat($._statement),
    _statement: $ => choice(
      $.address_block,
      $.script_block,
      $.module_definition,

      // the following is additional to make move code pieces highlighting work.
      $._block_item,
      $.use_decl,
      $._function_definition,
      $._struct_definition,
    ),

    use_decl: $ => seq('use', choice($.use_module, $.use_module_member, $.use_module_members), ';'),

    // use 0x1::A (as AA);
    use_module: $ => seq($.module_identity, optional(seq('as', field('alias', $._module_identifier)))),
    // use 0x1::A::T as TT;
    // use 0x1::A::f as ff;
    use_module_member: $ => seq($.module_identity, '::', $.use_member),
    use_module_members: $ => seq($.module_identity, '::', '{', sepBy1(',', $.use_member), '}'),
    use_member: $ => seq(
      field('member', $.identifier),
      optional(seq('as', field('alias', $.identifier)))
    ),



    spec_block: $ => seq(
      'spec',
      choice(
        $._spec_function,
        seq(optional(field('target', $.spec_block_target)), field('body', $.spec_body))
      )
    ),
    spec_block_target: $ => choice(
      seq('fun', $._function_identifier),
      seq('struct', $._struct_identifier),
      'module',
      seq(
        'schema',
        $._struct_identifier,
        optional(field('type_parameters', $.type_parameters)),
      ),
    ),
    spec_body: $ => seq(
      '{',
      repeat($.use_decl),
      repeat($._spec_block_memeber),
      '}'
    ),
    _spec_block_memeber: $ => choice(
      $.spec_invariant,
      $._spec_function,
      $.spec_condition,
      $.spec_include,
      $.spec_apply,
      $.spec_pragma,
      $.spec_variable,
      $.spec_let,
    ),
    spec_condition: $ => seq(
      choice(
        'assert', 'assume', 'decreases', 'aborts_if', 'ensures', 'succeeds_if',
        seq('requires', optional('module'))
      ),
      optional(field('condition_properties', $.condition_properties)),
      field('exp', $._expression),
      ';'
    ),
    condition_properties: $ => seq('[', sepBy(',', $.spec_property), ']'),
    spec_property: $ => seq($.identifier, optional(seq('=', $._literal_value))),

    _spec_function: $ => choice(
      $.native_spec_function,
      $.usual_spec_function,
      $.uninterpreted_spec_function,
    ),

    _type: $ => choice(
      // $.immutable_borrow_type,
      // $.mutable_borrow_type,
      $.apply_type,
      $.ref_type,
      $.tuple_type,
      // $.primative_type,
      // TODO: spec only
      $.function_type,
    ),
    apply_type: $ => seq(
      $._module_access,
      optional(field('type_arguments', $.type_arguments)),
    ),
    _module_access: $ => choice(
      alias($._reserved_identifier, $.identifier),
      $.identifier,
      $.module_access,
      $.qualified_module_access,
    ),
    module_access: $ => seq(
      field('module', $._module_identifier),
      '::',
      field('member', $.identifier)
    ),
    module_identity: $ => seq(
      field('address', $.address_literal),
      '::',
      field('module', $._module_identifier)
    ),

    type_arguments: $ => seq(
      '<',
      sepBy1(',', $._type),
      '>'
    ),

    _expression: $ => choice(
      // TODO: spec only
      $.lambda_expression,
      $.if_expression,
      $.while_expression,
      $.loop_expression,
      $.return_expression,
      $.abort_expression,
      $.assign_expression,
      // unary expression is included in binary_op,
      $._unary_expression,
      $.binary_expression,
      $.quantifier_expression
    ),

    _binary_operand: $ => choice(
      $._unary_expression,
      $.binary_expression,
    ),
    binary_expression: $ => {
      const table = [
        [PREC.implies, '==>'],
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.eq, '=='],
        [PREC.neq, '!='],
        [PREC.lt, '<'],
        [PREC.gt, '>'],
        [PREC.le, '<='],
        [PREC.ge, '>='],
        [PREC.range, '..'],
        [PREC.bitor, '|'],
        [PREC.xor, '^'],
        [PREC.bitand, '&'],
        [PREC.shl, '<<'],
        [PREC.shr, '>>'],
        [PREC.add, '+'],
        [PREC.sub, '-'],
        [PREC.mul, '*'],
        [PREC.div, '/'],
        [PREC.mod, '%']
      ];

      let binary_expression = choice(...table.map(
        ([precedence, operator]) => prec.left(precedence, seq(
          field('lhs', $._binary_operand),
          field('operator', alias(operator, $.binary_operator)),
          field('rhs', $._binary_operand),
        ))
      ));

      return binary_expression;
    },

    name_expression: $ => seq(
      field('access', $._module_access),
      optional(field('type_arguments', $.type_arguments)),
    ),
    call_expression: $ => seq(
      field('access', $._module_access),
      optional(field('type_arguments', $.type_arguments)),
      field('args', $.arg_list),
    ),
    arg_list: $ => seq(
      '(',
      sepBy(',', $._expression),
      ')'
    ),

    _literal_value: $ => choice(
      $.address_literal,
      $.bool_literal,
      $.num_literal,
      $.hex_string_literal,
      $.byte_string_literal,

    ),
    address_literal: $ => /0x[a-fA-F0-9]+/,
    num_literal: $ => /[0-9][0-9]*(?:u8|u64|u128)?/,
    // TODO: tree-sitter not support ".*?"
    _module_identifier: $ => alias($.identifier, $.module_identifier),
    _struct_identifier: $ => alias($.identifier, $.struct_identifier),
    // struct_type_name: $ => /[A-Z][0-9a-zA-Z_]*/, // must start with A-Z
    _function_identifier: $ => alias($.identifier, $.function_identifier),
    identifier: $ => /[a-zA-Z_][0-9a-zA-Z_]*/,
