test/corpus/use_decl.txt
====
use_decl
====

use 0x0::A;
use 0x0::A as AA;
use 0x0::A::member1;
use 0x0::A::member1 as m1;
use 0x0::A::{member1 as m1, member2 as m2, member3};

---
(source_file
  (use_decl
    (use_module
      (module_identity
        address: (address_literal)
        module: (module_identifier))))
  (use_decl
    (use_module
      (module_identity
        address: (address_literal)
        module: (module_identifier))
      alias: (module_identifier)))
  (use_decl
    (use_module_member
      (module_identity
        address: (address_literal)
        module: (module_identifier))
      (use_member
        member: (identifier))))
  (use_decl
    (use_module_member
      (module_identity
        address: (address_literal)
        module: (module_identifier))
      (use_member
        member: (identifier)
        alias: (identifier))))
  (use_decl
    (use_module_members
      (module_identity
        address: (address_literal)
        module: (module_identifier))
      (use_member
        member: (identifier)
        alias: (identifier))
      (use_member
        member: (identifier)
        alias: (identifier))
      (use_member
        member: (identifier)))))